[gd_scene load_steps=5 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://TwoWayPlatform.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 96, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 95.5, 27.5 )

[node name="TwoWayPlatform" type="Node2D"]
script = ExtResource( 2 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource( 1 )

[node name="ActivationArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ActivationArea"]
position = Vector2( 0, -36.5 )
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 3, 0.25 )
texture = ExtResource( 1 )

[node name="PauseTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[connection signal="area_entered" from="ActivationArea" to="." method="_on_ActivationArea_area_entered"]
[connection signal="area_exited" from="ActivationArea" to="." method="_on_ActivationArea_area_exited"]
[connection signal="timeout" from="PauseTimer" to="." method="_on_PauseTimer_timeout"]
